fixed spacing

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -81,9 +81,8 @@
 } */
 
 .heading h2 {
-
   text-align: center;
-  padding: 5rem;
+  padding: 2vw;
   font-weight: 700;
   font-size: 40px;
 }
