--- a/src/components/about/Event.css
+++ b/src/components/about/Event.css
@@ -3,7 +3,7 @@
 .events{
     background: #000;
     /* height: 100%; */
-    padding-top: 6rem;
+    padding-top: 2rem;
     padding-bottom: 40px;
     height: 100%;
 }
