--- a/src/components/themes/Themes.css
+++ b/src/components/themes/Themes.css
@@ -1,5 +1,5 @@
 .themes {
-  padding: 80px 0;
+  padding: 2vw 0;
   background-color: #000;
 }
 
